--- a/mod4/style.css
+++ b/mod4/style.css
@@ -1,5 +1,5 @@
 p{color:red; font-family:cursive;}
-h6{color:rgba(black,black, black,5)}
+h6{color:rgba(rgb(231, 150, 150),5) ; text-align: center;}
 h4{color: #008000; font-size: 1.5rem ;}
 h3{background-color: rgb(250, 198, 198)}
-h6{text-align: center}
+#test{width: 200px ; background-color: aqua;height: 100px; cursor: grabbing; margin: 100px;}
